background map image not showing corrected

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,5 +1,5 @@
 .locator {
-  background: url(assets/imgs/map.png);
+  background: url(../assets/imgs/map.png);
   background-position: center;
   background-size: cover;
   .clock-in-details{
